k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: visitas
  labels:
    app.kubernetes.io/part-of: osc-platform
