k8s/30-deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitas-web
  namespace: visitas
  labels: { app.kubernetes.io/name: visitas-web }
spec:
  replicas: 1
  selector:
    matchLabels: { app.kubernetes.io/name: visitas-web }
  template:
    metadata:
      labels: { app.kubernetes.io/name: visitas-web }
    spec:
      containers:
        - name: web
          image: localhost:32000/visitas-web:CHANGE_ME
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 80, name: http }]
          resources:
            requests: { cpu: "20m", memory: "32Mi" }
            limits:   { cpu: "200m", memory: "128Mi" }
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 3
            periodSeconds: 10
