k8s/32-ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visitas-web
  namespace: visitas
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [visitas.osc.app.br]
      secretName: visitas-osc-app-br-tls
  rules:
    - host: visitas.osc.app.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: visitas-web, port: { number: 80 } }
